# undervalued-house-finder

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
docs/: README.md  milestones.md
models/: IMPLEMENTATION.md  ISSUE_3_IMPLEMENTATION.md  README.md  pyproject.toml
models/examples/: basic_usage.py  event_timeline_usage.py
models/src/models/: __init__.py  address.py  enums.py  events.py  listing.py  normalizers.py
models/tests/: test_events.py  test_models.py
scaper/: EXTRACTED_FIELDS.md
scaper/realestatecom-scraper/: run.py
scaper/realestatecom-scraper/results/: search.json
