[tool.poetry]
name = "undervalued-house-finder-models"
version = "0.1.0"
description = "Core data models for property listings"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "models", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.7.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 120
target-version = "py310"

